# asset-tracker

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  002_update_dividends.sql  003_allocation_preferences.sql  004_telegram_settings.sql  005_dynamic_categories.sql  006_realtime_pricing.sql  007_usd_realtime.sql
backend/src/: handlers.rs  main.rs  models.rs  price_service.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: AssetClassManager.vue  AssetManager.vue  AssetManagerRealtime.vue  CategoryManager.vue  Dashboard.vue  DividendTracker.vue  Rebalancing.vue  TelegramSettings.vue
