[package]
name = "asset_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate", "rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
bigdecimal = "0.4"
rust_decimal = "1.33"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio-cron-scheduler = "0.10"
base64 = "0.21"
